k8s/02-databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-zonas
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-zonas
  template:
    metadata:
      labels:
        app: db-zonas
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-zonas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-zonas
  namespace: parking-ns
spec:
  selector:
    app: db-zonas
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-vehiculos
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-vehiculos
  template:
    metadata:
      labels:
        app: db-vehiculos
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-vehiculos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-vehiculos
  namespace: parking-ns
spec:
  selector:
    app: db-vehiculos
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-usuarios
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-usuarios
  template:
    metadata:
      labels:
        app: db-usuarios
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-usuarios-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-usuarios
  namespace: parking-ns
spec:
  selector:
    app: db-usuarios
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-tickets
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-tickets
  template:
    metadata:
      labels:
        app: db-tickets
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-tickets-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-tickets
  namespace: parking-ns
spec:
  selector:
    app: db-tickets
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-asignaciones
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-asignaciones
  template:
    metadata:
      labels:
        app: db-asignaciones
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-asignaciones-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-asignaciones
  namespace: parking-ns
spec:
  selector:
    app: db-asignaciones
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-audit
  namespace: parking-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-audit
  template:
    metadata:
      labels:
        app: db-audit
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-audit-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-audit
  namespace: parking-ns
spec:
  selector:
    app: db-audit
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
